@@ -33,9 +33,33 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|URLEncoder
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
 import|;
 end_import
 
@@ -133,7 +157,23 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|Stoppable
+name|Server
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|catalog
+operator|.
+name|CatalogTracker
 import|;
 end_import
 
@@ -157,9 +197,15 @@ begin_import
 import|import
 name|org
 operator|.
-name|junit
+name|apache
 operator|.
-name|After
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|zookeeper
+operator|.
+name|ZooKeeperWatcher
 import|;
 end_import
 
@@ -179,27 +225,7 @@ name|org
 operator|.
 name|junit
 operator|.
-name|Before
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
 name|BeforeClass
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Ignore
 import|;
 end_import
 
@@ -227,10 +253,6 @@ init|=
 operator|new
 name|HBaseTestingUtility
 argument_list|()
-decl_stmt|;
-specifier|private
-name|ReplicationZookeeper
-name|zkHelper
 decl_stmt|;
 comment|/**    * @throws java.lang.Exception    */
 annotation|@
@@ -266,12 +288,11 @@ name|shutdownMiniZKCluster
 argument_list|()
 expr_stmt|;
 block|}
-comment|/**    * @throws java.lang.Exception    */
 annotation|@
-name|Before
+name|Test
 specifier|public
 name|void
-name|setUp
+name|testLogCleaning
 parameter_list|()
 throws|throws
 name|Exception
@@ -284,37 +305,38 @@ operator|.
 name|getConfiguration
 argument_list|()
 decl_stmt|;
-comment|/* TODO REENABLE     zkHelper = new ReplicationZookeeperWrapper(         ZooKeeperWrapper.createInstance(conf, HRegionServer.class.getName()),         conf, new AtomicBoolean(true), "test-cluster");         */
-block|}
-comment|/**    * @throws java.lang.Exception    */
-annotation|@
-name|After
-specifier|public
-name|void
-name|tearDown
-parameter_list|()
-throws|throws
-name|Exception
-block|{   }
-annotation|@
-name|Ignore
-annotation|@
-name|Test
-comment|/* REENABLE -- DISABLED UNTIL REPLICATION BROUGHT UP TO NEW MASTER */
-specifier|public
-name|void
-name|testLogCleaning
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|Configuration
-name|c
-init|=
-name|TEST_UTIL
+name|conf
 operator|.
-name|getConfiguration
+name|setBoolean
+argument_list|(
+name|HConstants
+operator|.
+name|REPLICATION_ENABLE_KEY
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|Server
+name|server
+init|=
+operator|new
+name|DummyServer
 argument_list|()
+decl_stmt|;
+name|ReplicationZookeeper
+name|zkHelper
+init|=
+operator|new
+name|ReplicationZookeeper
+argument_list|(
+name|server
+argument_list|,
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|true
+argument_list|)
+argument_list|)
 decl_stmt|;
 name|Path
 name|oldLogDir
@@ -339,7 +361,10 @@ name|URLEncoder
 operator|.
 name|encode
 argument_list|(
-literal|"regionserver:60020"
+name|server
+operator|.
+name|getServerName
+argument_list|()
 argument_list|,
 literal|"UTF8"
 argument_list|)
@@ -351,54 +376,8 @@ name|FileSystem
 operator|.
 name|get
 argument_list|(
-name|c
+name|conf
 argument_list|)
-decl_stmt|;
-name|Stoppable
-name|stoppable
-init|=
-operator|new
-name|Stoppable
-argument_list|()
-block|{
-specifier|private
-specifier|volatile
-name|boolean
-name|stopped
-init|=
-literal|false
-decl_stmt|;
-annotation|@
-name|Override
-specifier|public
-name|void
-name|stop
-parameter_list|(
-name|String
-name|why
-parameter_list|)
-block|{
-name|this
-operator|.
-name|stopped
-operator|=
-literal|true
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|boolean
-name|isStopped
-parameter_list|()
-block|{
-return|return
-name|this
-operator|.
-name|stopped
-return|;
-block|}
-block|}
 decl_stmt|;
 name|LogCleaner
 name|cleaner
@@ -408,9 +387,9 @@ name|LogCleaner
 argument_list|(
 literal|1000
 argument_list|,
-name|stoppable
+name|server
 argument_list|,
-name|c
+name|conf
 argument_list|,
 name|fs
 argument_list|,
@@ -565,7 +544,18 @@ operator|==
 literal|0
 condition|)
 block|{
-comment|// REENABLE        zkHelper.addLogToList(fileName.getName(), fakeMachineName);
+name|zkHelper
+operator|.
+name|addLogToList
+argument_list|(
+name|fileName
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|fakeMachineName
+argument_list|)
+expr_stmt|;
 name|System
 operator|.
 name|out
@@ -707,7 +697,7 @@ name|out
 operator|.
 name|println
 argument_list|(
-literal|"Keeped log files: "
+literal|"Kept log files: "
 operator|+
 name|file
 operator|.
@@ -718,6 +708,121 @@ name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+specifier|static
+class|class
+name|DummyServer
+implements|implements
+name|Server
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Configuration
+name|getConfiguration
+parameter_list|()
+block|{
+return|return
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|ZooKeeperWatcher
+name|getZooKeeper
+parameter_list|()
+block|{
+try|try
+block|{
+return|return
+operator|new
+name|ZooKeeperWatcher
+argument_list|(
+name|getConfiguration
+argument_list|()
+argument_list|,
+literal|"dummy server"
+argument_list|,
+name|this
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|e
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|CatalogTracker
+name|getCatalogTracker
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|getServerName
+parameter_list|()
+block|{
+return|return
+literal|"regionserver,60020,000000"
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|abort
+parameter_list|(
+name|String
+name|why
+parameter_list|,
+name|Throwable
+name|e
+parameter_list|)
+block|{}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|stop
+parameter_list|(
+name|String
+name|why
+parameter_list|)
+block|{}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|isStopped
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
 block|}
 block|}
 block|}
